fix alignment of the topics grid

--- a/src/jg/coop/css/content/_topics.scss
+++ b/src/jg/coop/css/content/_topics.scss
@@ -3,6 +3,7 @@
     @extend .list-unstyled;
     display: flex;
     flex-wrap: wrap;
+    gap: $spacer;
     justify-content: space-around;
     margin-bottom: 0;
   }
@@ -11,9 +12,6 @@
     display: flex;
     flex-direction: column;
     width: 10em;
-    padding-right: calc(#{$spacer} / 2);
-    padding-left: calc(#{$spacer} / 2);
-    margin-bottom: $spacer;
     font-size: $font-size-sm;
     text-align: center;
 
@@ -36,17 +34,28 @@
   }
 }
 
-.topics-grid li {
-  display: flex;
-  justify-content: center;
-  width: 50%;
-  margin-bottom: $main-spacer;
+.topics-grid {
+  ul {
+    display: grid;
+    grid-template-columns: repeat(1, minmax(10em, 1fr));
+    gap: $spacer;
+    justify-items: center;
 
-  @include media-breakpoint-up(md) {
-    width: 33.33%;
+    @include media-breakpoint-up(sm) {
+      grid-template-columns: repeat(2, minmax(10em, 1fr));
+    }
+
+    @include media-breakpoint-up(lg) {
+      grid-template-columns: repeat(3, minmax(10em, 1fr));
+    }
   }
-}
 
-.topics-grid a {
-  max-width: 10em;
+  li {
+    width: 100%;
+    max-width: 12rem;
+  }
+
+  a {
+    max-width: 100%;
+  }
 }
